--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.21",
+    "autoprefixer": "^10.4.14",
     "eslint": "^9",
     "eslint-config-next": "15.4.3",
-    "postcss": "^8.5.6",
+    "postcss": "^8.4.24",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^3.3.5",
     "typescript": "^5"
   }
