--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,9 @@
 {
   "semi": true,
   "singleQuote": true,
-  "tabWidth": 2,
   "trailingComma": "es5",
-  "plugins": ["prettier-plugin-tailwindcss"]
+  "printWidth": 80,
+  "tabWidth": 2,
+  "bracketSpacing": true,
+  "arrowParens": "avoid"
 }
