--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.4.3",
     "postcss": "^8.4.24",
+    "prettier": "^3.6.2",
     "tailwindcss": "^3.3.5",
     "typescript": "^5"
   }
