--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@motionone/react": "^10.16.4",
+    "@react-three/drei": "^10.6.1",
+    "@react-three/fiber": "^9.0.0-alpha.8",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.9",
     "mini-svg-data-uri": "^1.4.4",
+    "motion": "^12.23.11",
     "next": "^15.4.4",
     "next-themes": "^0.4.6",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.178.0",
+    "three-globe": "^2.44.0"
   },
   "overrides": {
     "framer-motion": {
