--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^10.6.1",
     "@react-three/fiber": "^9.0.0-alpha.8",
+    "canvas-confetti": "^1.9.3",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.9",
     "mini-svg-data-uri": "^1.4.4",
@@ -20,6 +21,7 @@
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "react-icons": "^5.5.0",
+    "react-lottie": "^1.2.10",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.178.0",
@@ -36,6 +38,7 @@
     "@types/node": "^20.19.9",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-lottie": "^1.2.10",
     "autoprefixer": "^10.4.14",
     "eslint": "^9",
     "eslint-config-next": "15.4.3",
